# Shooqtions

./: .gitignore  CLAUDE.md  Feedback pt 2.docx  Layer 1 testing.docx  PM_Trade_Input.docx  README.md  VoiDetailsForProduct.xls  current_rates.json  demo_prompt_input.txt  demo_rundown.py  demo_rundown_output.md  pyproject.toml
docs/: layer2_spec.md  plan.md  pm_grammar.md  spec.md  v2_backlog.md
src/kcp_structgen/: __init__.py  __main__.py  enumerator.py  events.py  gui.py  parser.py  products.py  rates.py  strikes.py
src/kcp_structgen/analysis/: __init__.py  aggregator.py  classifier.py  cme_loader.py  commentary_loader.py  event_matcher.py  flow_loader.py  fomc_scraper.py  memory.py  runner.py  segmenter.py
src/kcp_structgen/analysis/prompts/: weekly_analysis.md
src/kcp_structgen/prompts/: parse_scenario.md
tests/: test_enumerator.py  test_parser_golden.py  test_products.py  test_rates.py  test_rates_dialog_trigger.py  test_strikes.py
tests/analysis/: test_aggregator.py  test_classifier.py  test_cme_loader.py  test_commentary_loader.py  test_event_matcher.py  test_fomc_scraper.py  test_memory.py  test_prompt_file.py  test_runner.py  test_segmenter.py
tests/analysis/fixtures/: sample_fomc_statement.html
tests/golden/: 01_fade_hawkish_fomc_sfrz6.json  02_ecb_dovish_er_march_cheap.json  03_sonia_bullish_broken_in_favour.json  04_rate_to_price_conversion.json  05_hawkish_bearish_ratio_spreads.json  README.md
